--- a/JudoScoreBoard/JudoScoreBoard.csproj
+++ b/JudoScoreBoard/JudoScoreBoard.csproj
@@ -6,4 +6,8 @@
         <ImplicitUsings>enable</ImplicitUsings>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Toolbelt.Blazor.HotKeys2" Version="6.0.1" />
+    </ItemGroup>
+
 </Project>
