--- a/JudoScoreBoard/JudoScoreBoard.csproj
+++ b/JudoScoreBoard/JudoScoreBoard.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Blazored.LocalStorage" Version="4.5.0" />
       <PackageReference Include="Toolbelt.Blazor.HotKeys2" Version="6.0.1" />
     </ItemGroup>
 
